fix / letter-spacing

--- a/src/pages/index/modules/partner/style.scss
+++ b/src/pages/index/modules/partner/style.scss
@@ -6,9 +6,9 @@
 
     &__title {
         font-family: $title-font;
-        font-size: 2rem;
+        font-size: rem(20);
         line-height: 3rem;
-        letter-spacing: -2%;
+        letter-spacing: -0.02rem;
         font-weight: 600;
         text-align: center;
     }
